# despeinarpuntocom

./: .env   .env.example  .gitignore  Escrito.odt  README.md  consultas.sql  diagrama.sql
backend/: Dockerfile.backend  alembic.ini  main.py  pyproject.toml
backend/app/: middelware.py
backend/app/application/: main.py
backend/app/config/: config.py
backend/app/controllers/: asientos_controller.py  clients_controller.py  paquetes_controller.py  reservas_controller.py  users_controller.py  vuelos_controller.py
backend/app/db/: conection.py  db_cases.py
backend/app/infrastructure/database/models/: air_port.py
backend/app/routes/: __init__.py  asientos_router.py  clientes_router.py  login_router.py  paquetes_router.py  reservas_router.py  users_router.py  vuelos_router.py
backend/app/utils/: errors.py  handler.py  jwt.py  response.py
backend/gui/: test.py
frontend/: interfaces.tsx  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/config/: config.ts
frontend/hooks/: useAsientosVuelo.ts  useClient.ts  useFlights.ts  usePackages.ts  useReservas.ts  useReservas.tsx  useServiciosAdicionales.ts  useServiciosReserva.ts  useUsers.ts  useUsers.tsx
frontend/icons/: StepperIcons.tsx  adjustments.tsx  create.tsx  eye.tsx  eyeClose.tsx  facebook.tsx  gear.tsx  home.tsx  index.ts  logoutIcon.tsx  search.tsx  smilePlus.tsx
frontend/services/: api.ts  (+8 more)
sqlserver/: 01_tables.sql  02_funciones.sql  03_indices.sql  04_vistas.sql  05_triggers.sql  06_insert_data.sql  07_procedimientos.sql  init.sh  init.sql
(+31 files in other folders)
