[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "geoalchemy2>=0.20.0",
    "mssql-python>=1.9.0",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]
